[package]
name = "reify-geometry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SingleKernelHolder wrapping a single geometry kernel for tests; production uses Engine::with_registered_kernel"

[dependencies]
reify-ir.workspace = true

[dev-dependencies]
reify-test-support.workspace = true
