[package]
name = "reify-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Compiled IR and runtime vocabulary for Reify (Phase 3 of docs/prds/core-ast-ir-layering.md task ζ)"

[dependencies]
reify-core.workspace = true
reify-ast.workspace = true
im.workspace = true
inventory.workspace = true
xxhash-rust.workspace = true
strum.workspace = true
[features]
serde = ["reify-core/serde", "reify-ast/serde"]

[dev-dependencies]
serde_json = "1"
