[package]
name = "reify-kernel-gmsh"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Gmsh surface-to-volume tetrahedral mesher kernel adapter (v0.3 FEA pipeline)"
build = "build.rs"

[features]
# Pure compile-gate: no implicit deps.  Activating this feature causes
# `inventory::submit!` and `gmsh_factory()` in `src/register.rs` to compile in,
# registering the Gmsh kernel in the inventory-driven multi-kernel registry
# even when `cfg(has_gmsh)` is unset.
#
# In production stub builds (no `/opt/reify-deps`, no `stub_register`) the
# submit is OMITTED — the stub kernel is NOT registered, preventing "gmsh"
# from silently winning a `(Convert{from:Mesh}, VolumeMesh)` routing it cannot
# actually execute.
#
# For integration test binaries in `tests/` (separate compilation units that
# do NOT inherit `cfg(test)` from the parent crate) this feature is activated
# via the self-dev-dep below — mirroring the pattern at:
#   crates/reify-kernel-openvdb/Cargo.toml:9-29
#   crates/reify-kernel-manifold/Cargo.toml:27
#
# When `has_gmsh` is set (real FFI build), the submit fires regardless of this
# feature — the gate is `cfg(any(has_gmsh, feature = "stub_register"))`.
stub_register = []
# Compile in the `BoundaryAttributionInput` / `mesh_surface_to_volume_with_attribution`
# impl (`src/mesh_boundary.rs`). Default-off; activated by the self-dev-dep
# below for in-crate integration tests, and by engine wiring on its own dep
# edge in production.
#
# Pure compile-gate (no implicit deps). The `BoundaryAssociation` /
# `NodeAttachment` vocabulary lives in `reify-types` (already a normal dep),
# so this feature does NOT need `["dep:reify-mesh-morph"]` — depending on
# `reify-mesh-morph` here would form a Cargo cycle through
# `reify-mesh-morph` → `reify-eval` → `reify-solver-elastic` → this crate.
# Unlike `reify-kernel-occt`, which needs the `Projector` trait for
# `OcctProjector` and therefore must depend on `reify-mesh-morph`, the gmsh
# adapter only needs the data types and the `reify-eval → ...` chain blocks
# the equivalent OCCT pattern here.
mesh-morph = []

[dependencies]
reify-types.workspace = true
inventory.workspace = true
tracing.workspace = true

[build-dependencies]
reify-build-utils.workspace = true

# `reify-eval` is a dev-dependency (not a normal dep) for the same reason the
# OCCT, Manifold, Fidget, and OpenVDB adapters exclude it from production deps:
# adapter crates depend on `reify-types` for the dependency-inverted
# `GeometryKernel` trait but deliberately NOT on `reify-eval` — keeping the
# adapter → eval dep direction inverted preserves the layering that lets
# `reify-eval` depend on adapter crates without a cycle. As a dev-dep,
# `reify-eval` is only pulled into the link closure of the
# `tests/dispatcher_integration.rs` test binary; the production library stays
# free of the eval dependency.
[dev-dependencies]
reify-eval.workspace = true
reify-test-support.workspace = true
# Self-dev-dep: activates `stub_register` for ALL integration test binaries in
# `tests/` (which are separate compilation units — they do NOT inherit
# `cfg(test)` from the parent crate, so `cfg(test)` alone cannot reach the
# gated `inventory::submit!`).  Same pattern used by:
#   crates/reify-kernel-openvdb/Cargo.toml:72
#   crates/reify-kernel-manifold/Cargo.toml:51
reify-kernel-gmsh = { path = ".", features = ["stub_register", "mesh-morph"] }

