[package]
name = "reify-kernel-occt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenCASCADE geometry kernel implementation"
build = "build.rs"

[dependencies]
reify-types.workspace = true
cxx = "1"
inventory.workspace = true
tokio = { workspace = true }
# Optional dep behind the `mesh-morph` feature flag — gates the `OcctProjector`
# impl of `reify_mesh_morph::Projector` in `src/projector_impl.rs`. Kept
# optional (default-off) to preserve the adapter→eval dep-direction inversion
# documented at `crates/reify-kernel-gmsh/Cargo.toml:28-43`:
# adapter crates (occt/gmsh/manifold/fidget/openvdb) deliberately exclude
# `reify-eval` from normal deps so `reify-eval` can depend on adapter crates
# without a cycle. `reify-mesh-morph` deps `reify-eval` normally, so a
# non-optional edge here would transitively pull eval into every consumer of
# `reify-kernel-occt`. Engine wiring (task ε / 2947) enables this feature on
# its own dep edge; in-crate integration tests opt in via the self-dev-dep.
reify-mesh-morph = { workspace = true, optional = true }

[features]
test-fixtures = []
# Compile in the `OcctProjector` impl (`src/projector_impl.rs`) of
# `reify_mesh_morph::Projector`. Default-off; activated by the self-dev-dep
# below for in-crate integration tests, and by engine wiring on its own dep
# edge in production.
mesh-morph = ["dep:reify-mesh-morph"]

[build-dependencies]
cxx-build = "1"
cc = "1"
reify-build-utils.workspace = true

# `reify-eval` is a dev-dependency (not a normal dep) for the same reason the
# OCCT, Manifold, and Fidget adapters exclude it from production deps: adapter
# crates depend on `reify-types` for the dependency-inverted `GeometryKernel`
# trait but deliberately NOT on `reify-eval` — keeping the adapter → eval dep
# direction inverted preserves the layering that lets `reify-eval` depend on
# adapter crates without a cycle. As a dev-dep, `reify-eval` is only pulled
# into the link closure of the `tests/dispatcher_integration.rs` test binary;
# the production library stays free of the eval dependency.
#
# The cycle with `reify-eval/Cargo.toml:40 [dev-dependencies]
# reify-kernel-occt.workspace = true` is allowed by Cargo because dev-deps
# do not transitively propagate to consumers — verified safe by the existing
# openvdb/manifold/gmsh adapters which already exercise this same pattern.
[dev-dependencies]
reify-eval.workspace = true
# Self-dev-dep enables `test-fixtures`-gated helpers (the `store_*_for_test`
# methods, plus `revolve_synthesis_post_sort_for_test`) in integration tests;
# see src/lib.rs. The gate hides the Rust wrapper only — the underlying
# cxx-bridge symbols and C++ implementations are built unconditionally.
reify-kernel-occt = { path = ".", features = ["test-fixtures", "mesh-morph"] }
reify-test-support.workspace = true
serde_json = { workspace = true }
