[package]
name = "reify-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language server protocol implementation for Reify"

[dependencies]
reify-types.workspace = true
reify-syntax.workspace = true
reify-compiler.workspace = true
reify-eval.workspace = true
reify-constraints.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[features]
test-support = []

[dev-dependencies]
reify-test-support.workspace = true
tokio = { workspace = true, features = ["time"] }
# Enable test-instrumentation-gated accessors (e.g. Engine::last_param_override_type_kind_rejections)
# for the inline #[cfg(test)] mod tests; mirrors the self-dev-dep pattern in crates/reify-eval/Cargo.toml.
# Cargo unifies features only during dev/test builds — production builds are unaffected.
reify-eval = { workspace = true, features = ["test-instrumentation"] }
