[package]
name = "reify-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language server protocol implementation for Reify"

[dependencies]
reify-types = { workspace = true, features = ["serde"] }
reify-syntax.workspace = true
reify-compiler.workspace = true
reify-eval.workspace = true
reify-constraints.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[features]
test-support = []

[dev-dependencies]
reify-test-support.workspace = true
tokio = { workspace = true, features = ["time"] }
# Enable test-instrumentation so #[cfg(test)] blocks can call cache_store()
# (now gated behind #[cfg(any(test, feature = "test-instrumentation"))]).
# Mirrors the self-dev-dep pattern in crates/reify-eval/Cargo.toml.
reify-eval = { workspace = true, features = ["test-instrumentation"] }
