[package]
name = "reify-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) server for Reify"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
thiserror = "2"
reify-types = { workspace = true, features = ["serde"] }

[features]
test-support = []

[dev-dependencies]
reify-mcp = { path = ".", features = ["test-support"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-std", "io-util", "test-util"] }
