[package]
name = "reify-mesh-morph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mesh morphing classifier and engine for Reify"

[dependencies]
reify-types.workspace = true
reify-eval.workspace = true
reify-solver-elastic.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
reify-compiler.workspace = true
serde_json = { workspace = true }
