[package]
name = "reify-mesh-morph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mesh morphing classifier and engine for Reify"

[features]
# Enables `stats::reset_for_test()` in the compiled artifact (not just in the
# same-crate `#[cfg(test)]` context). Activate from any crate's
# `[dev-dependencies]` to reset the process-global stats between cross-crate
# test cases once engine wiring (PRD #2947-#2949) lands.
testing = []

[dependencies]
reify-core.workspace = true
reify-ir.workspace = true
reify-eval.workspace = true
reify-solver-elastic.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
reify-ir.workspace = true
reify-compiler.workspace = true
reify-test-support.workspace = true
serde_json = { workspace = true }
