[package]
name = "reify-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Task scheduling runtime (stub in M1)"

[dependencies]
reify-types.workspace = true
reify-eval.workspace = true
reify-expr.workspace = true
reify-compiler.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[features]
test-utils = []

[dev-dependencies]
reify-test-support.workspace = true
reify-constraints.workspace = true
tokio = { workspace = true, features = ["time"] }
