[package]
name = "reify-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Task scheduling runtime (stub in M1)"

[dependencies]
reify-config.workspace = true
reify-core.workspace = true
reify-ir.workspace = true
reify-eval.workspace = true
reify-expr.workspace = true
reify-compiler.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[features]
test-utils = []

[dev-dependencies]
reify-core.workspace = true
reify-ir.workspace = true
reify-test-support.workspace = true
reify-constraints.workspace = true
# time feature intentionally dev-only: tests need sleep/timeout, production code should not
tokio = { workspace = true, features = ["time"] }
# Enable test-instrumentation so concurrent_eval.rs can call cache_store()
# (now gated behind #[cfg(any(test, feature = "test-instrumentation"))]).
# Mirrors the self-dev-dep pattern in crates/reify-eval/Cargo.toml.
reify-eval = { workspace = true, features = ["test-instrumentation"] }
