[package]
name = "reify-shell-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Voxel-medial mid-surface extraction for v0.4 shell-element FEA (PRD docs/prds/v0_4/structural-analysis-shells.md)"

[dependencies]
reify-core.workspace = true
reify-ir.workspace = true
# `PersistentlyCacheable` trait lives in `reify-eval::persistent_cache` (see
# crates/reify-eval/src/persistent_cache.rs:399). Per Rust's orphan rule,
# `impl PersistentlyCacheable for ShellExtractionResult` must live where either
# the trait or the type is local. Since `ShellExtractionResult` is defined here
# in `result.rs`, the impl lives here too — which requires this `reify-eval`
# dep. Task α (#3592). reify-eval does NOT currently depend on this crate, so
# this dep is acyclic at α land time; task γ's planned `reify-eval →
# reify-shell-extract` edge will conflict and γ owns the resolution (move trait
# to `reify-types` OR co-locate the impl in reify-eval).
reify-eval.workspace = true
# Wire-format toolchain mirroring `ElasticResult`'s precedent at
# `reify-eval::persistent_cache.rs:697-803`: bincode 1.3 fixint-LE for the
# header, zstd 0.13 level-0 for byte-deterministic compression, bytemuck for
# zero-copy LE f64/u32 slab casts, serde-derive for the header struct.
bincode.workspace = true
zstd.workspace = true
bytemuck.workspace = true
serde = { workspace = true, features = ["derive"] }
rustc-hash = "2"
