[package]
name = "reify-shell-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Voxel-medial mid-surface extraction for v0.4 shell-element FEA (PRD docs/prds/v0_4/structural-analysis-shells.md)"

[dependencies]
reify-core.workspace = true
reify-ir.workspace = true
# `PersistentlyCacheable` trait was moved from `reify-eval::persistent_cache`
# to `reify-core::persistent_cache` during task γ (#3834) to break the
# `reify-shell-extract → reify-eval` dependency cycle. The trait body uses
# only `std::io::{Read, Write}` + `Sized`, satisfying reify-core's B1
# invariant (zero `reify-*` deps). The `reify-eval` dep has been removed;
# `impl PersistentlyCacheable for ShellExtractionResult` in `result.rs` now
# references `reify_core::persistent_cache::PersistentlyCacheable` directly.
# Wire-format toolchain mirroring `ElasticResult`'s precedent at
# `reify-eval::persistent_cache.rs:697-803`: bincode 1.3 fixint-LE for the
# header, zstd 0.13 level-0 for byte-deterministic compression, bytemuck for
# zero-copy LE f64/u32 slab casts, serde-derive for the header struct.
bincode.workspace = true
zstd.workspace = true
bytemuck.workspace = true
serde = { workspace = true, features = ["derive"] }
rustc-hash = "2"
