[package]
name = "reify-solver-elastic"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Linear-elastostatic FEA solver kernel for Reify (PRD docs/prds/v0_3/structural-analysis-fea.md)"
build = "build.rs"

[build-dependencies]
reify-build-utils.workspace = true

[dependencies]
reify-ir.workspace = true
reify-kernel-gmsh = { workspace = true }
faer = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
reify-ir.workspace = true
