[package]
name = "reify-stdlib"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standard library: unit definitions and built-in functions"

[dependencies]
reify-core.workspace = true
reify-gcode.workspace = true
reify-ir.workspace = true
tracing.workspace = true
faer = { workspace = true }

[dev-dependencies]
reify-core.workspace = true
reify-gcode.workspace = true
reify-ir.workspace = true
reify-test-support.workspace = true
